--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^3.2.13",
     "vue-3-socket.io": "^1.0.5",
     "vue-router": "^4.0.14",
+    "vue-sweetalert2": "^5.0.5",
     "vue-the-mask": "^0.11.1",
     "vue3-cookies": "^1.0.6",
     "vuex": "^4.0.2"
