--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vuelidate/core": "^2.0.0-alpha.40",
     "@vuelidate/validators": "^2.0.0-alpha.28",
     "axios": "^0.26.1",
+    "chart.js": "2.9.3",
     "core-js": "^3.8.3",
     "socket.io-client": "^4.4.1",
     "string-mask": "^0.3.0",
