[CHANGE] addresses page

--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
 VUE_APP_TITLE=Murojaat taksi
-VUE_APP_HOST_URL=https://127.0.0.1:3000
-VUE_APP_SOCKET_URL=wss://127.0.0.1:3000
-VUE_APP_GOOGLE_MAP_KEY=<>
+VUE_APP_HOST_URL=https://laravel.joriy.uz/api
+VUE_APP_SOCKET_URL=wss://laravel.joriy.uz
+VUE_APP_GOOGLE_MAP_KEY=AIzaSyC-f292Xulo7sQbC27-0xKB3OHL1u6CwWI
